# Collapsed_LDA

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
Comparisons/: 20NewsGroup_gensim.py  20NewsGroup_sklearn.py  Reuter_gensim.py  Reuter_sklearn.py  func_gensim.py  print_sklearn.py
Examples/: 20NewsGroup.py  reuters_example.py
collapsed-lda/: utility.py
collapsed-lda/comparisons/: 20_newsgroups_gensim.py  retuer_gensim.py
collapsed-lda/examples/: 20_newsgroups.py
collapsed-lda/lda/: latent_dirichlet_allocation.py
collapsed_lda/: test.py
collapsed_lda/comparisons/: 20_newsgroups_gensim.py  20_newsgroups_sklearn.py  print_sklearn.py  retuer_gensim.py  reuter_sklearn.py  reuters_gensim.py  reuters_sklearn.py
collapsed_lda/examples/: 20_newsgroups.py  NIPS_example.py  reuters_example.py
collapsed_lda/lda/: __init__.py  inference.py  latent_dirichlet_allocation.py  sampler.py
collapsed_lda/utility/: gensim.py  sklearn.py  utility.py
comparisons/: 20NewsGroup_gensim.py  20NewsGroup_sklearn.py  Reuter_gensim.py  Reuter_sklearn.py
examples/: reuters_example.py
src/: LatentDirichletAllocation.py  Test.py  inference.py  latent_dirichlet_allocation.py  sampler.py  sampler_class.py  test.py  utility.py
src/comparisons/: 20_newsgroups_gensim.py
src/examples/: NIPS_example.py
src/lda/: sampler.py
tests/: conftest.py  test_lda.py  test_utility.py
