[tool.poetry]
name = "collapsed-lda"
version = "1.0.0"
description = "Implementation of collapsed Gibbs sampling for Latent Dirichlet Allocation (LDA)"
authors = [
    "Cole Juracek <therealjuracek@gmail.com>",
    "Pierre Gardan <p.gardan@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
tqdm = "^4.66.1"
pandas = "^2.2.0"
gensim = "^4.3.2"
nltk = "^3.8.1"
beautifulsoup4 = "^4.12.3"
scikit-learn = "^1.4.0"
spacy = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
